# ai_portal

./: .gitignore  README.md  client.ts  log.txt  logs.txt  main_chain.py  package.json  portal.py  pyproject.toml  ts_server.ts
TS/: package-lock.json  ts_server.ts  tsconfig.json
modules/UI/: index.html  styles.css
modules/chain/: layout_graph.py
modules/chain_agents/: agents.py  executor.py  layout.py  orchestrator.py  parallel.py  verification.py
modules/cluster/: agents.py  executor.py  layout.py  layout_builder.py  planner.py  verification.py  worker_manager.py
modules/graph/: graph.py  layout_graph.py
modules/main_graph/: graph.py  layout_graph.py
modules/supervisor/: supervisor.py  verification.py
modules/util/: a2a_calls.py  lang_fuse.py  oci_client.py  ociopen_ai.py  remote_agent_connection.py  states.py
remote/cinema/: cinema_agent.py  cinema_executor.py  cinema_server.py
remote/decorations/: deco_agent.py  deco_executor.py  deco_server.py
remote/files/: file_agent.py  file_executor.py  file_server.py
remote/home_food/: food_agent.py  food_executor.py  food_server.py
remote/mcp/: client.py
remote/util/: lang_fuse.py  oci_client.py
remote/weather/: weather_agent.py  weather_executor.py  weather_server.py
servers/cinema/: cinema_agent.py  cinema_executor.py  cinema_server.py
servers/decorations/: deco_agent.py  deco_executor.py  deco_server.py
servers/flower/: flower_agent.py  flower_executor.py  flower_server.py
servers/home_food/: food_agent.py  food_executor.py  food_server.py
servers/util/: lang_fuse.py  oci_client.py
(+18 files in other folders)
