[project]
name = "ai-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.16",
    "envyaml>=1.10.211231",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.28",
    "langfuse>=3.2.1",
    "langgraph>=0.6.0",
    "mcp>=1.12.3",
    "oci>=2.156.0",
    "python-box>=7.3.2",
    "uvicorn>=0.35.0",
]
